# scann-rust

./: Cargo.toml  README.md
benches/: scann_benchmark.rs
examples/: basic_bruteforce.rs  batched_search.rs  partitioned_search.rs
src/: config.rs  error.rs  lib.rs  scann.rs  searcher.rs  types.rs
src/brute_force/: mod.rs  scalar_quantized.rs  searcher.rs  top_k.rs
src/data_format/: datapoint.rs  dataset.rs  docid.rs  mod.rs
src/distance_measures/: many_to_many.rs  mod.rs  one_to_many.rs  one_to_many_asymmetric.rs  one_to_one.rs  sparse.rs
src/hashes/: codebook.rs  hasher.rs  lut.rs  lut16.rs  lut16_simd.rs  mod.rs  stacked.rs
src/mutator/: mod.rs
src/partitioning/: mod.rs  partitioner.rs  tree_partitioner.rs
src/projection/: chunking.rs  mod.rs  opq.rs  pca.rs  random.rs  truncate.rs
src/quantization/: bfloat16.rs  fp8.rs  mod.rs  scalar.rs
src/restricts/: allowlist.rs  crowding.rs  mod.rs
src/simd/: dispatch.rs  mod.rs  portable.rs  tests.rs  traits.rs  x86.rs
src/tree_x_hybrid/: mod.rs
src/trees/: kmeans.rs  kmeans_tree.rs  mod.rs
src/utils/: bits.rs  gmm.rs  linear_algebra.rs  mod.rs  parallel.rs  random.rs  reordering.rs
tests/: stress_tests.rs  unit_tests.rs
